# openvas-mcp

./: .dockerignore  .env.example  .gitignore  .xsdata.xml  Dockerfile  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
src/: config.py  constants.py  main.py
src/config/: gvm_client_config.py  logging_config.py
src/core/: __init__.py  mcp_server.py
src/models/: __init__.py
src/services/: __init__.py  gvm_adapter.py  gvm_client.py
src/tools/: __init__.py  _scan_workflow_helpers.py  gvm_primitive_tools.py  inspection_control_tools.py  low_level_tools.py  scan_workflow_tools.py  vm_workflow_tools.py  vuln_scan_tools.py
src/tools/utils/: constants.py  helpers.py
src/utils/: logging_config.py  utilities.py
